gitops/apps/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "300s"
    nginx.org/proxy-send-timeout: "300s"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: nginx-inc
  tls:
    - hosts:
        - prometheus-prod.usecortex.ai
      secretName: prometheus-tls
  rules:
    - host: prometheus-prod.usecortex.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
